@@ -3,7 +3,7 @@ package com.twitter.finagle.service
 import com.twitter.conversions.time._
 import com.twitter.finagle._
 import com.twitter.finagle.stats.{NullStatsReceiver, StatsReceiver}
-import com.twitter.util.{Duration, Time, Timer, TimerTask, Try, Promise}
+import com.twitter.util.{Duration, Time, Timer, TimerTask, Try}
 import scala.util.Random
 
 object FailureAccrualFactory {
@@ -37,33 +37,96 @@ object FailureAccrualFactory {
   val role = Stack.Role("FailureAccrual")
 
   /**
-   * A class eligible for configuring a [[com.twitter.finagle.Stackable]]
-   * [[com.twitter.finagle.service.FailFastFactory]].
+   * An ADT representing a [[FailureAccrualFactory]]s [[Stack.Param]], which is one of the following:
+   *
+   * 1. [[Param.Configured]] - configures failure accrual
+   * 2. [[Param.Replaced]] - replaces the standard implementation with the given one
+   * 3. [[Param.Disabled]] - completely disables this role in the underlying stack
+   */
+  sealed trait Param {
+    def mk(): (Param, Stack.Param[Param]) = (this, Param.param)
+  }
+
+  private[finagle] object Param {
+    case class Configured(numFailures: Int, markDeadFor: () => Duration) extends Param
+    case class Replaced(factory: Timer => ServiceFactoryWrapper) extends Param
+    case object Disabled extends Param
+
+    implicit val param: Stack.Param[Param] = Stack.Param(Param(5, () => 5.seconds))
+  }
+
+  // -Implementation notes-
+  //
+  // We have to provide these wrapper functions that produce params instead of calling constructors
+  // on case classes by the following reasons:
+  //
+  //  1. The param inserted into Stack.Params should be casted to its base type in order to tell
+  //     the compiler what implicit value to look up.
+  //  2. It's not possible to construct a triply-nested Scala class in Java using the sane API.
+  //     See http://stackoverflow.com/questions/30809070/accessing-scala-nested-classes-from-java
+
+  /**
+   * Configures the [[FailureAccrualFactory]].
+   *
+   * Note there is a Java-friendly method in the API that takes `Duration` as a value, not a function.
+   *
    * @param numFailures The number of consecutive failures before marking an endpoint as dead.
    * @param markDeadFor The duration to mark an endpoint as dead.
    */
-  case class Param(numFailures: Int, markDeadFor: () => Duration) {
-    // make it easier for Java users if they just need a static duration value.
-    def this(numFailures: Int, markDeadFor: Duration) = this(numFailures, () => markDeadFor)
-    def mk(): (Param, Stack.Param[Param]) =
-      (this, Param.param)
-  }
-  object Param {
-    implicit val param = Stack.Param(Param(5, () => 5.seconds))
-  }
+  def Param(numFailures: Int, markDeadFor: () => Duration): Param =
+    Param.Configured(numFailures, markDeadFor)
+
+  /**
+   * Configures the [[FailureAccrualFactory]].
+   *
+   * @param numFailures The number of consecutive failures before marking an endpoint as dead.
+   * @param markDeadFor The duration to mark an endpoint as dead.
+   */
+  def Param(numFailures: Int, markDeadFor: Duration): Param =
+    Param.Configured(numFailures, () => markDeadFor)
+
+  /**
+   * Replaces the [[FailureAccrualFactory]] with the [[ServiceFactoryWrapper]]
+   * returned by the given function `factory`.
+   */
+  private[finagle] def Replaced(factory: Timer => ServiceFactoryWrapper): Param =
+    Param.Replaced(factory)
+
+  /**
+   * Replaces the [[FailureAccrualFactory]] with the given [[ServiceFactoryWrapper]] `factory`.
+   */
+  private[finagle] def Replaced(factory: ServiceFactoryWrapper): Param =
+    Param.Replaced(_ => factory)
+
+  /**
+   * Disables the [[FailureAccrualFactory]].
+   */
+  private[finagle] val Disabled: Param = Param.Disabled
 
   /**
    * Creates a [[com.twitter.finagle.Stackable]] [[com.twitter.finagle.service.FailureAccrualFactory]].
    */
   def module[Req, Rep]: Stackable[ServiceFactory[Req, Rep]] =
-    new Stack.Module3[param.Stats, Param, param.Timer, ServiceFactory[Req, Rep]] {
+    new Stack.Module3[param.Stats, FailureAccrualFactory.Param, param.Timer, ServiceFactory[Req, Rep]] {
       val role = FailureAccrualFactory.role
       val description = "Backoff from hosts that we cannot successfully make requests to"
-      def make(_stats: param.Stats, _param: Param, _timer: param.Timer, next: ServiceFactory[Req, Rep]) = {
-        val FailureAccrualFactory.Param(n, d) = _param
-        val param.Timer(timer) = _timer
-        val param.Stats(statsReceiver) = _stats
-        wrapper(statsReceiver, n, d)(timer) andThen next
+
+      def make(
+        _stats: param.Stats,
+        _param: FailureAccrualFactory.Param,
+        _timer: param.Timer,
+        next: ServiceFactory[Req, Rep]
+      ) = _param match {
+        case Param.Configured(n, d) =>
+          val param.Timer(timer) = _timer
+          val param.Stats(statsReceiver) = _stats
+          wrapper(statsReceiver, n, d)(timer) andThen next
+
+        case Param.Replaced(f) =>
+          val param.Timer(timer) = _timer
+          f(timer) andThen next
+
+        case Param.Disabled => next
       }
     }
 
