@@ -117,21 +117,27 @@ case class Memcached(
           _eject: param.EjectFailedHost,
           _timer: finagle.param.Timer,
           next: ServiceFactory[Command, Response]
-        ): ServiceFactory[Command, Response] = {
-          val FailureAccrualFactory.Param(numFailures, markDeadFor) = _param
-          val finagle.param.Timer(timer) = _timer
-          val finagle.param.Stats(statsReceiver) = _stats
-          val param.EjectFailedHost(eject) = _eject
+        ): ServiceFactory[Command, Response] = _param match {
+          case FailureAccrualFactory.Param.Configured(numFailures, markDeadFor) =>
+            val finagle.param.Timer(timer) = _timer
+            val finagle.param.Stats(statsReceiver) = _stats
+            val param.EjectFailedHost(eject) = _eject
 
-          val wrapper = new ServiceFactoryWrapper {
-            def andThen[Command, Response](
-              factory: ServiceFactory[Command, Response]
-            ) =
-              new KetamaFailureAccrualFactory(
-                factory, numFailures, markDeadFor, timer, key, healthBroker,
-                eject, statsReceiver.scope("failure_accrual"))
-          }
-          wrapper.andThen(next)
+            val wrapper = new ServiceFactoryWrapper {
+              def andThen[Command, Response](
+                                              factory: ServiceFactory[Command, Response]
+                                              ) =
+                new KetamaFailureAccrualFactory(
+                  factory, numFailures, markDeadFor, timer, key, healthBroker,
+                  eject, statsReceiver.scope("failure_accrual"))
+            }
+            wrapper.andThen(next)
+
+          case FailureAccrualFactory.Param.Replaced(f) =>
+            val finagle.param.Timer(timer) = _timer
+            f(timer) andThen next
+
+          case FailureAccrualFactory.Param.Disabled => next
         }
       }
     }
