@@ -49,11 +49,20 @@ Breaking API Changes
     `Service.status` and `ServiceFactory.status` supersedes `isAvailable` usage since 6.24.0 release.
     ``RB_ID=678588``
 
+  * finagle-core: `ClientBuilder.failureAccrual` method is removed. Use `ClientBuilder.failureAccrualFactory`
+    instead. ``RB_ID=689076``
+
+  * finagle-core: Stack param `ClientBuilder.ClientConfig.FailureAccrualFac` is removed.
+    Use `ClientBuilder.failureAccrualFactory` instead. ``RB_ID=689076``
+
   * finagle-exception: `com.twitter.finagle.exception.ExceptionReporter` is no longer used
     as the default `com.twitter.finagle.util.ReporterFactory`. ``RB_ID=674646``
 
   * finagle-kestrel: Replace deprecated finagle-kestrel package with finagle-kestrelx.
     ``RB_ID=667920``
+
+  * finagle-core: Add new method `noFailureAccrual` on `ClientBuilder` that completely disables
+    `FailureAccrualFactory` in the underlying stack. ``RB_ID=689076``
 
 
 6.25.0
